src/onegov.org/onegov/org/theme/styles/org.scss
/* ... */
@media #{$small-only} {
    .occurrece {
        margin-bottom: 1rem !important;
    }

    .calendar-day {
        .calendar-day-date {
            font-size: .875rem;

            .date {
                .long-month {
                    display: none;
                }

                .short-month {
                    display: inline;
                }
            }
        }
    }

    .calendar-text-column {
        padding-left: 0;

        h3 {
            font-size: 1rem !important;
        }

        .occurrence-location,
        .occurrence-time {
            font-size: .875rem !important;
        }

        .occurrence-tags {
            display: none;
        }
    }
}


/*
    Leaflet customisation
*/
.leaflet-popup-content a {
    color: $anchor-font-color !important;

    &:hover {
        color: $anchor-font-color-hover !important;
    }
}

/*
    Events
*/
.imported-event-panel p {
    font-size: .875rem;
}

.imported-event {
    display: inline-block;
    font-family: $font-family-monospace;
    font-size: .8rem;
    margin-top: .5rem;
}

.calendar-export-list {
    a::before {
        @include icon('\f133');
        color: $body-font-color;
        margin-right: 1ex;
    }
}

.occurrence {
    margin-bottom: 2.25rem;

    h3 {
        font-size: $h4-font-size - $h4-font-reduction;
        font-weight: bold;
    }

    .occurrence-date {
        font-size: .875rem;
        margin-bottom: .5rem;
        margin-top: .75rem;
    }

    .occurrence-location,
    .occurrence-time {
        font-size: 1rem;
        margin-bottom: .25rem;
    }

    .occurrence-time {
        margin-bottom: .6rem;
    }
}

.occurrence-map,
.occurrence-image {
    margin-bottom: 1.5rem;
}

.date-range-selector-results {
    border-bottom: 2px solid $primary-color;
    font-size: 1.2rem;
    margin-bottom: 1rem;
    padding-bottom: .5rem;
}

.occurrences-filter-panel {
    margin-bottom: 2rem;
}

.occurrences-filter-tags,
.date-range-selector {
    margin-bottom: .5em;
}

.occurrence-tags,
.occurrence-description {
    margin-bottom: 1.25em;
}

.occurrence-description {
    max-width: $max-line-width;
}

/*
    Popup Menu
*/
.popup {
    background-color: $white;
    border: 1px solid $gainsboro;
    border-radius: 5px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, .3);
    padding: 15px 20px;
    position: relative;

    a {
        display: block;
        font-size: .875rem;

        &:hover {
            text-decoration: underline;
        }

        &:hover::before {
            display: inline-block;
            text-decoration: none;
        }

        &.disabled {
            color: $monsoon;

            &:hover {
                text-decoration: none;
            }

            &::before {
                @include icon($disabled-icon);
                color: $monsoon;
            }
        }
    }

    .close {
        border-radius: 50px;
        color: $oil;
        display: block;
        font-size: 20px;
        font-weight: bold;
        height: 24px;
        line-height: 17px;
        opacity: .3;
        position: absolute;
        right: 0;
        text-align: center;
        top: 2px;
        width: 24px;

        &:hover {
            opacity: .7;
            text-decoration: none;
        }
    }

    &::after,
    &::before {
        border: solid transparent;
        content: ' ';
        height: 0;
        pointer-events: none;
        position: absolute;
        width: 0;
    }

    &.right {
        &::after,
        &::before {
            right: 100%;
            top: 50%;
        }

        &::after {
            border-color: rgba(213, 213, 213, 0);
            border-right-color: $white;
            border-width: 7px;
            margin-top: -7px;
        }

        &::before {
            border-color: rgba(245, 24, 172, 0);
            border-right-color: $gainsboro;
            border-width: 8px;
            margin-top: -8px;
        }
    }

    &.top {
        &::after,
        &::before {
            right: 50%;
            top: 100%;
        }

        &::after {
            border-color: rgba(213, 213, 213, 0);
            border-top-color: $white;
            border-width: 7px;
        }

        &::before {
            border-color: rgba(245, 24, 172, 0);
            border-top-color: $gainsboro;
            border-width: 8px;
        }
    }

    &.error.top,
    &.error.right,
    &.error.left {
        background-color: $alert-color;
        border-color: $red-dark;
        color: $white;
        font-size: .8rem;
        padding: 4px 24px 5px 9px;

        .close {
            top: 4px;
        }

        &::after {
            border-top-color: $alert-color;
        }

        &::before {
            border-top-color: $red-dark;
        }
    }
}

// on smartphones, the popup becomes a modal dialog
@media #{$small-only} {
    .popup {
        bottom: 20%;
        left: 5%;
        position: fixed;
        right: 5%;
        top: 20%;
    }
}

/*
    Search box
*/
.searchbox {
    input {
        margin-bottom: 0;
    }

    button {
        margin-bottom: 0;
        padding: 0;
    }

    input[type="text"]:not(:valid) ~ .reset-button {
        display: none;
    }

    input::-ms-clear {
        display: none;
    }

    .reset-button {
        $size: 1rem;

        background: transparent;
        color: $input-font-color;
        position: absolute;
        right: $size / 2;
        top: calc(50% - #{$size / 2});

        &::after {
            @include icon('\f057');
            display: block;
            height: $size;
            width: $size;
        }
    }
}

/*
    Search results
*/
ul.search-results {
    a {
        display: block;
        font-weight: bold;
    }

    ul {
        list-style-type: none;
        margin-left: 0;
    }

    > li {
        margin-bottom: 1em;
    }
}
/* ... */

